adicionados novos plugins

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -3,6 +3,8 @@
   "suggest.maxCompleteItemCount": 20,
   "suggest.noselect": false,
   "coc.preferences.formatOnSaveFiletypes": [
+    "css",
+    "html",
     "javascript",
     "typescript",
     "typescriptreact",
