--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -3,6 +3,7 @@
   "suggest.maxCompleteItemCount": 20,
   "suggest.noselect": false,
   "coc.preferences.formatOnSaveFiletypes": [
+    "scss",
     "css",
     "html",
     "javascript",
