--- a/.config/i3/config
+++ b/.config/i3/config
@@ -322,7 +322,7 @@ set_from_resource $term_color15    color15
 
 # Start i3bar to display a workspace bar (plus the system information i3status if available)
 bar {
-  #output eDP1
+  output eDP1
 	i3bar_command i3bar
 	status_command i3status
 	position top
